Removed unknown Java Options